Fix the problem of too much zoomed in background images on mobile. Attempt # 3.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -227,11 +227,11 @@ header {
 /****** Media queries *******/
 @media screen and (max-width: 768px) {
   #portfolio-div {
-    background-position: center center;
+    background-size: auto 100%;
   }
 
   #about-div {
-    background-position: center center;
+    background-size: auto 100%;
   }
 }
 
